Closed Bug 871636 Opened 12 years ago Closed 12 years ago

Reopening saved draft stubbornly re-adds deleted automatic CC or BCC recipients

Categories

(Thunderbird :: Message Compose Window, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 28.0

People

(Reporter: thomas8, Assigned: mkmelin)

Details

Attachments

(1 file)

This has annoyed me many times as a violation of ux-control: After manually deleting automatic CCs/BCCs, then saving as draft, closing, reopening - deleted CCs/BCCs stubbornly reappear. They should not. STR 1) For YourAccount, set some automatical CCs/BCCs: Tools > account settings > YourAccount > copies & folders > When sending messages, automatically: [x] Cc these email addresses: [auto-cc@asdf.com ] [x] Bcc these email addresses: [auto-bcc@asdf.com ] 2) compose new message 3) manually delete/remove automatical CC/BCC recipients (optionally add a To-recipient: to-recipient@asdf.com) 4) Verify and memorize current recipients of your draft, then: File > Save As > Draft (Ctrl+S) 5) Close draft (i.e. close composition window) 6) Verify recipients of saved draft from 3pane's msg preview 7) Reopen draft 8) Verify recipients of reopened draft and compare with step 4) Actual Result 4) when saving draft: depending on Step 3, there are either - no recipients, OR - one To-recipient: to-recipient@asdf.com 6) Accordingly, saved draft preview has exactly these recipients (none or one) 7) After re-opening the draft into composition mode, auto-CCs and auto-BCCs magically re-appear, i.e. they are re-added to the composition although user has explicitly deleted them and they are not seen in the draft. Expected result: 7) When re-opening saved draft, TB should NOT add auto-CCs and auto-BCCs again. This is unexpected and obviously violating ux-control and ux-consistency between what was saved, draft preview, and the draft after reopening. They should all be the same, and TB should not alter the message recipients at this time, which is really unsolicited. Iow, we should only add auto-CCs and auto-BCCs a) *once* when a new message is created (new|reply|forward etc.) OR b) *once* when the sender of an existing composition is changed and the new sender comes with new auto-CCs/BCCs. Otherwise, TB needs to respect the integrity of saved drafts.
Summary: Reopening saved draft re-adds deleted automatic CC or BCC recipients → Reopening saved draft stubbornly re-adds deleted automatic CC or BCC recipients
(In reply to Thomas D. from comment #0) > 3) manually delete/remove automatical CC/BCC recipients > (optionally add a To-recipient: to-recipient@asdf.com) That is, you manually delete auto-cc@asdf.com and auto-bcc@asdf.com *from your composition's recipient section*.
Attached patch proposed fixSplinter Review
Don't do the block that sets up auto-cc, auto-bcc and fixes reply-to if it's a draft. One-liner.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #818632 - Flags: review?(mbanner)
Is this a regression of one of the bugs landed in TB 24, or has it been around for a while and just not reported?
Comment on attachment 818632 [details] [diff] [review] proposed fix This seems sensible in any case. r=Standard8
Attachment #818632 - Flags: review?(mbanner) → review+
AFAIK, this has been around forever.
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 28.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: