Bug 871636 - Reopening saved draft stubbornly re-adds deleted automatic CC or BCC recipients. r=standard8